# Virtual-Sampler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  example.json  v.json
docs/: doxy-conf  doxy-conf.bak
docs/docbook/: annotated.xml  class_test_class.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d0381950fc41278198232cb047ffc1f9.xml  index.xml  main_8cpp.xml  main_8cpp_source.xml  test_8h.xml  test_8h_source.xml
docs/html/: AppBase_8hpp_source.html  App_8hpp_source.html  FileManager_8hpp_source.html  KeyFieldHandler_8hpp_source.html  KeyNameDialog_8hpp_source.html  Key_8hpp_source.html  MenuBarHandler_8hpp_source.html  MessageHandler_8hpp_source.html  SliderFieldHandler_8hpp_source.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp.js  app_8cpp__incl.map  app_8cpp__incl.md5  app_8hpp.html  app_8hpp.js  app_8hpp__dep__incl.map  app_8hpp__dep__incl.md5  app_8hpp__incl.map  app_8hpp__incl.md5  app_8hpp_source.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  base_8hpp.html  base_8hpp.js  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  base_8hpp_source.html  classFileManager-members.html  classFileManager.html  classKey-members.html  classKey.html  classKey.js  classKeyFieldHandler-members.html  classKeyFieldHandler.html  classKeyFieldHandler.js  (+469 more)
docs/latex/: AppBase_8hpp_source.tex  App_8hpp_source.tex  FileManager_8hpp_source.tex  KeyFieldHandler_8hpp_source.tex  KeyNameDialog_8hpp_source.tex  Key_8hpp_source.tex  MenuBarHandler_8hpp_source.tex  MessageHandler_8hpp_source.tex  SliderFieldHandler_8hpp_source.tex  annotated.tex  app_8cpp.tex  app_8cpp__incl.md5  app_8hpp.tex  app_8hpp__dep__incl.md5  app_8hpp__incl.md5  app_8hpp_source.tex  base_8cpp.tex  base_8cpp__incl.md5  base_8hpp.tex  base_8hpp__dep__incl.md5  base_8hpp__incl.md5  base_8hpp_source.tex  classFileManager.tex  classKey.eps  classKey.tex  classKeyFieldHandler.tex  classKeyNameDialog.eps  classKeyNameDialog.tex  classKey__coll__graph.md5  classKey_a031f67093df2e52f3fbd2e9636f2b7c5_icgraph.md5  classKey_a10b93ca6114e38a3fbe37e45a8449336_icgraph.md5  classMainApp.tex  classMainApp__inherit__graph.md5  classMainApp_aff3d398e1b61f1016c37d57798f86731_cgraph.md5  classMainApp_aff3d398e1b61f1016c37d57798f86731_icgraph.md5  classMainFrame.tex  classMainFrame__coll__graph.md5  classMainFrame__inherit__graph.md5  classMainFrame_a547eea4cf3da431012cfb37a530ac9d8_cgraph.md5  classMainFrame_a5c89a65be5af96dc28f5c2bb0335103a_cgraph.md5  (+243 more)
docs/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_d0381950fc41278198232cb047ffc1f9.rtf  refman.rtf
html/: graph_legend.html  index.html  navtreedata.js
latex/: refman.tex
libs/wx-build/: CMakeCache.txt  Makefile  cmake_install.cmake  (+3 more)
source/: app.cpp  base.cpp  filemanager.cpp  key.cpp  keyhandler.cpp  keynamedialog.cpp  menubar.cpp  messages.cpp  namedialog.cpp  sliderhandler.cpp
src/: main.cpp
(+137 files in other folders)
